--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Taiwo Oriyomi – Front-End Developer</title>
-    <meta name="description" content="Front-End Developer | HTML, CSS, JavaScript | Featured: my portfolio" />
+    <title>Taiwo Oriyomi – Full-Stack Software Engineer & Ai Engineer </title>
+    <meta name="description" content="Full-Stack Software developer & Ai Engineer  | Ai,React,Node.js, Python,APIs,JavaScript | Featured: my portfolio" />
     <link rel="icon" href="/favicon.ico" />
   </head>
   <body>
